--- a/sass/custom/components/song-card.scss
+++ b/sass/custom/components/song-card.scss
@@ -1,82 +1,12 @@
 .song-card {
     padding: 10px;
+}
 
-    &.active {
-        border-color: #A6D2A5;
-
-        .song-card-image {
-            pointer-events: none;
-        }
-
-        .song-card-playing {
-            background-color: rgba(0, 0, 0, 0.8);
-        }
-
-        .song-card-playing-icon {
-            opacity: 1;
-        }
-    }
+.song-card-main {
+    display: flex;
 }
 
 .song-card-image {
-    width: 100%;
-    height: 70px;
-    margin-bottom: 10px;
-    background-position: center center;
-    background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-
-    &:hover {
-        cursor: pointer;
-    }
-}
-
-.song-card-user {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    overflow: hidden;
-}
-
-.song-card-user-image {
-    width: 24px;
-    height: 24px;
-    margin-top: 4px;
-    margin-right: 10px;
-    border-radius: 100%;
-    float: left;
-}
-
-.song-card-playing {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    background-color: transparent;
-    -webkit-transition: background-color 0.2s ease-in-out;
-    -moz-transition: background-color 0.2s ease-in-out;
-    -ms-transition: background-color 0.2s ease-in-out;
-    transition: background-color 0.2s ease-in-out;
-
-    &:hover {
-        background-color: rgba(0, 0, 0, 0.8);
-
-        .song-card-playing-icon {
-            opacity: 1;
-        }
-    }
-}
-
-.song-card-playing-icon {
-    color: #A6D2A5;
-    font-size: 28px;
-    opacity: 0;
-    -webkit-transition: opacity 0.2s ease-in-out;
-    -moz-transition: opacity 0.2s ease-in-out;
-    -ms-transition: opacity 0.2s ease-in-out;
-    transition: opacity 0.2s ease-in-out;
+    width: 100px;
+    height: 100px;
 }
