--- a/sass/custom/components/song-card.scss
+++ b/sass/custom/components/song-card.scss
@@ -1,14 +1,14 @@
 .song-card {
-    padding: 10px;
-}
-
-.song-card-main {
     display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 10px;
+    border-bottom: 1px solid #e3e3e3;
 }
 
 .song-card-image {
-    width: 120px;
-    height: 120px;
+    width: 60px;
+    height: 60px;
     margin-right: 20px;
     background-position: center center;
     background-repeat: no-repeat;
@@ -18,38 +18,27 @@
     background-size: cover;
 }
 
-.song-card-info {
-    flex: 1;
-}
-
 .song-card-title {
-    font-size: 26px;
+    font-size: 14px;
     font-weight: 300;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
 }
 
 .song-card-user {
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin-top: 8px;
 }
 
 .song-card-user-image {
     width: 24px;
     height: 24px;
-    border-radius: 50%;
     margin-right: 10px;
+    border-radius: 50%;
     background-position: center center;
     background-repeat: no-repeat;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-}
-
-.song-card-username {
-    color: #ccc;
-    font-size: 18px;
 }
