--- a/sass/custom/components/song-card.scss
+++ b/sass/custom/components/song-card.scss
@@ -1,51 +1,27 @@
 .song-card {
-    display: flex;
-    flex-direction: row;
-    border-top: 1px solid #e3e3e3;
-    border-left: 1px solid #e3e3e3;
-    border-right: 1px solid #e3e3e3;
-
-    &:last-child {
-        border-bottom: 1px solid #e3e3e3;
-    }
+    padding: 10px;
 
     &.active {
         border-color: #A6D2A5;
-        border-bottom: 1px solid #A6D2A5;
-
-        & + .song-card {
-            border-top: none;
-        }
 
         .song-card-image {
             pointer-events: none;
         }
 
-        .songs-card-playing {
+        .song-card-playing {
             background-color: rgba(0, 0, 0, 0.8);
         }
 
-        .songs-card-playing-icon {
+        .song-card-playing-icon {
             opacity: 1;
         }
     }
 }
 
-.song-card-detail {
-    display: flex;
-    flex: 1;
-    align-items: center;
-    padding: 10px;
-}
-
-.song-card-info {
-    flex: 1;
-}
-
 .song-card-image {
-    width: 60px;
-    height: 60px;
-    margin-right: 20px;
+    width: 100%;
+    height: 70px;
+    margin-bottom: 10px;
     background-position: center center;
     background-repeat: no-repeat;
     -webkit-background-size: cover;
@@ -58,73 +34,77 @@
     }
 }
 
-.song-card-title {
-    display: block;
-    color: #222;
-    font-size: 14px;
-    font-weight: 300;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-
 .song-card-user {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+    display: block;
+    width: 100%;
 }
 
 .song-card-user-image {
+    display: block;
     width: 24px;
     height: 24px;
+    margin-top: 4px;
     margin-right: 10px;
-    border-radius: 50%;
-    background-position: center center;
-    background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+    border-radius: 100%;
+    float: left;
 }
 
-.song-card-info-extra {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-top: 10px;
-}
-
-.song-card-stats {
-    flex: 1;
-    margin-left: 20px;
-    font-size: 11px;
-    color: #ccc;
-}
-
-.song-card-stat {
-    display: inline-block;
-    width: 80px;
-
-    & + .song-card-stat {
-        margin-left: 20px;
-    }
-
-    i {
-        margin-right: 10px;
-    }
-}
-
-.song-card-waveform {
+.song-card-playing {
     display: flex;
     align-items: center;
-    width: 200px;
-    height: 80px;
-    border-left: 1px solid #e3e3e3;
-}
-.song-card-waveform .waveform {
+    justify-content: center;
+    width: 100%;
     height: 100%;
+    background-color: transparent;
+    -webkit-transition: background-color 0.2s ease-in-out;
+    -moz-transition: background-color 0.2s ease-in-out;
+    -ms-transition: background-color 0.2s ease-in-out;
+    transition: background-color 0.2s ease-in-out;
 
-    .waveform-image-container {
-        height: 100%;
+    &:hover {
+        background-color: rgba(0, 0, 0, 0.8);
+
+        .song-card-playing-icon {
+            opacity: 1;
+        }
     }
+}
+
+.song-card-playing-icon {
+    color: #A6D2A5;
+    font-size: 28px;
+    opacity: 0;
+    -webkit-transition: opacity 0.2s ease-in-out;
+    -moz-transition: opacity 0.2s ease-in-out;
+    -ms-transition: opacity 0.2s ease-in-out;
+    transition: opacity 0.2s ease-in-out;
+}
+
+.song-card-details {
+    position: relative;
+}
+
+.song-card-user-username {
+    display: block;
+    margin-right: 30px;
+    font-size: 11px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.song-card-title {
+    display: block;
+    color: #222;
+    font-size: 11px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.song-card-heart {
+    position: absolute;
+    bottom: -2px;
+    right: 0;
+    font-size: 14px;
 }
