--- a/styles/custom/components/song-card.scss
+++ b/styles/custom/components/song-card.scss
@@ -4,8 +4,8 @@
     &.active {
         border-color: #A6D2A5;
 
-        .song-card-image {
-            pointer-events: none;
+        .song-card-image:hover {
+            cursor: auto;
         }
 
         .song-card-playing {
@@ -13,7 +13,9 @@
         }
 
         .song-card-playing-icon {
+            position: relative;
             opacity: 1;
+            z-index: 2;
         }
     }
 }
@@ -51,6 +53,7 @@
 }
 
 .song-card-playing {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
