--- a/styles/custom/custom.scss
+++ b/styles/custom/custom.scss
@@ -10,6 +10,8 @@
 @import 'components/nav-search';
 @import 'components/input';
 @import 'components/links';
+@import 'components/me';
+@import 'components/me-prompt';
 @import 'components/modal';
 @import 'components/padder';
 @import 'components/player';
@@ -32,3 +34,4 @@
 @import 'components/user-card';
 @import 'components/utils';
 @import 'components/waveform';
+@import 'components/waveform-bars';
