--- a/styles/custom/components/type.scss
+++ b/styles/custom/components/type.scss
@@ -1,7 +1,6 @@
 body {
     color: #222;
-    font-family: 'Open Sans', sans-serif';
+    font-family: 'Open Sans';
     font-size: 14px;
     background-color: #f4f4f4;
-    overflow-y: scroll;
 }
